위로 올라가기 버튼 위치, 동작 수정

--- a/index.html
+++ b/index.html
@@ -95,9 +95,8 @@
     </article>
     <div class="bottom-img">
         <img class="back-img" alt="" src="img/bottom-img.svg">
-        <a href="#">
-        <img class="hover" alt="페이지 상단으로 올라가기" src="img/hover.svg"></a>
     </div>
+    <img class="hover" alt="페이지 상단으로 올라가기" src="img/hover.svg">
     <footer>
         <a href="">
             <img alt="로고 이미지" src="img/Logo.svg" class="logo"></a>
